# BadLands

./: .gitignore  CMakeLists.txt  CMakeSettings.json  COPYING  README.md  build.sh  build_kernel.sh  build_loader.sh  simbuild.sh
bootloader/: CMakeLists.txt
bootloader/include/: acpi.hpp  ldstdio.hpp  ldstdlib.hpp
bootloader/include/efi/: efi.h  efi_datatypes.h  efi_fs.hpp  efi_image_services.hpp  efi_misc.hpp
bootloader/include/loader/: acpi_check.hpp  basic_graphics.hpp  boot_config.hpp  kernel_loader.hpp  loader_info.hpp  paging.hpp  pci.hpp  psf_font.hpp  system_config.hpp
bootloader/src/: entry.cpp  setup.asm
bootloader/src/efi/: efi_fs.cpp  efi_image_services.cpp  efi_misc.cpp
bootloader/src/ldstdio/: printf.cpp  puts.cpp  readkey.cpp  vsnprintf.cpp
bootloader/src/ldstdlib/: itoa.cpp  memory.cpp
bootloader/src/loader/: acpi_check.cpp  basic_graphics.cpp  boot_config.cpp  kernel_loader.cpp  paging.cpp  pci.cpp  psf_font.cpp  system_config.cpp
common/include/shared/: Bitwise.hpp  Debug.hpp  Guarded.hpp  Lock.hpp  LockGuard.hpp  MemoryOrdering.hpp  PIO.hpp  Response.hpp  SimpleAtomic.hpp
common/include/shared/efi/: efi.h
common/include/shared/graphics/: basic.hpp
common/include/shared/memory/: defs.hpp  layout.hpp
common/src/shared/: AtomicImpl.asm
kernel/: CMakeLists.txt  linker.ld
kernel/include/: exports.hpp
kernel/include/acpi/: Interface.hpp  header.hpp  madt.hpp  rsdp.hpp  tables.hpp  xsdt.hpp
kernel/include/crypto/: crc.hpp
kernel/include/devices/Block/: Device.hpp  Interface.hpp
kernel/include/devices/KeyboardDispatcher/: Converter.hpp  Keycodes.h  Keypacket.hpp  Multiplexer.hpp
kernel/include/devices/PS2/: Controller.hpp  Keyboard.hpp  Keypoints.hpp
kernel/include/devices/Storage/: Controller.hpp  Driver.hpp
kernel/include/devices/Storage/SCSI/: Driver.hpp
kernel/include/devices/USB/: Driver.hpp
kernel/include/devices/USB/HID/: Device.hpp  Driver.hpp  Keyboard.hpp
kernel/include/devices/USB/MassStorage/: Driver.hpp
kernel/include/devices/USB/MassStorage/BBB/: Driver.hpp
kernel/include/devices/USB/xHCI/: Controller.hpp  Device.hpp  Specification.hpp  TRB.hpp
kernel/include/ext/: BasicHashMap.hpp  FNV1A.hpp
kernel/include/fs/: IFNode.hpp  NPFS.hpp  Status.hpp  VFS.hpp
kernel/include/interrupts/: APIC.hpp  Core.hpp  CoreDump.hpp  IDT.hpp  InterruptProvider.hpp  PIC.hpp  PIT.hpp  Panic.hpp  RuntimeSvc.hpp  Timer.hpp  idt.hpp
kernel/include/kern/: math.hpp  memory.hpp
kernel/include/mm/: Heap.hpp  IOHeap.hpp  Paging.hpp  PhysicalMemory.hpp  Utils.hpp  VirtualMemory.hpp  VirtualMemoryLayout.hpp  gdt.hpp
kernel/include/pci/: Interface.hpp  MSI.hpp  PCI.hpp
kernel/include/sched/: Dispatcher.hpp  Self.hpp  TaskContext.hpp  TaskManager.hpp
kernel/include/screen/: Framebuffer.hpp  Log.hpp
kernel/include/services/: shell.hpp
kernel/src/: entry.cpp
kernel/src/acpi/: Interface.cpp
kernel/src/crypto/: crc.cpp
kernel/src/devices/Block/: Device.cpp
kernel/src/devices/KeyboardDispatcher/: Converter.cpp  KeycodeMap.c  Multiplexer.cpp
kernel/src/devices/PS2/: Controller.asm  Controller.cpp  Keyboard.cpp  KeyboardEvent.cpp  Keyboard_IRQ.asm  Keypoints.cpp
kernel/src/devices/Storage/SCSI/: Driver.cpp
kernel/src/devices/USB/: Driver.cpp
kernel/src/devices/USB/HID/: Device.cpp  Driver.cpp  Keyboard.cpp
kernel/src/devices/USB/MassStorage/: Driver.cpp
kernel/src/devices/USB/MassStorage/BBB/: Driver.cpp
kernel/src/devices/USB/xHCI/: Controller.cpp  Device.cpp  Specification.cpp  TRB.cpp
kernel/src/fs/: IFNode.cpp  NPFS.cpp  VFS.cpp
kernel/src/interrupts/: APIC.cpp  CoreDump.cpp  CoreDumpSetup.asm  IDT.cpp  IDTCore.asm  InterruptProvider.cpp  PIC.asm  PIT.cpp  Panic.cpp  RuntimeSvc.cpp  idt.cpp
kernel/src/interrupts/core/: PageFault.cpp
kernel/src/mm/: Heap.cpp  IOHeap.cpp  Paging.cpp  PhysicalMemory.cpp  Utils.cpp  VirtualMemory.cpp  gdt.asm
kernel/src/pci/: Interface.cpp  MSI.cpp  PCI.cpp
kernel/src/sched/: Dispatcher.cpp  SchedulerIRQ.asm  Self.cpp  TaskContext.cpp  TaskManager.cpp
kernel/src/screen/: Format.cpp  Framebuffer.cpp  Log.cpp  ThreadSafe.cpp
kernel/src/services/shell/: entry.cpp
simulation/: OVMF_CODE-pure-efi.fd  OVMF_VARS-pure-efi.fd  qemusim.sh
